--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "watch": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^4.0.1",
-    "express": "^4.17.1",
-    "gh-pages": "^3.2.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
-  }
+    "name": "react-initial",
+    "version": "1.0.0",
+    "description": "react inital setup",
+    "main": "index.js",
+    "engine": {
+        "node": "10.16.0",
+        "npm": "6.9.0"
+    },
+    "scripts": {
+        "start": "concurrently \"npm run backend\" \"npm run start --prefix client\"",
+        "backend": "nodemon server/server.js",
+        "frontend": "npm run start --prefix client",
+        "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
+    },
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "bcrypt": "5.0.1",
+        "body-parser": "1.18.3",
+        "cookie-parser": "1.4.3",
+        "cors": "2.8.5",
+        "debug": "4.1.1",
+        "dotenv": "^10.0.0",
+        "express": "4.17.1",
+        "jsonwebtoken": "8.5.1",
+        "moment": "2.24.0",
+        "mongoose": "6.0.12"
+    },
+    "devDependencies": {
+        "concurrently": "4.1.0",
+        "nodemon": "1.19.1"
+    }
 }
