--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-  "name": "googlebooks-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server/server.js",
-  "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^5.1.0"
-  }
+    "name": "react-initial",
+    "version": "1.0.0",
+    "description": "react inital setup",
+    "main": "index.js",
+    "engine": {
+        "node": "10.16.0",
+        "npm": "6.9.0"
+    },
+    "scripts": {
+        "start": "concurrently \"npm run backend\" \"npm run start --prefix client\"",
+        "backend": "nodemon server/index.js",
+        "frontend": "npm run start --prefix client",
+        "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
+    },
+    "author": "Mlaku Sheri",
+    "license": "MIT",
+    "dependencies": {
+        "bcrypt": "5.0.1",
+        "body-parser": "1.18.3",
+        "cookie-parser": "1.4.3",
+        "cors": "2.8.5",
+        "debug": "4.1.1",
+        "dotenv": "^10.0.0",
+        "express": "4.17.1",
+        "jsonwebtoken": "8.5.1",
+        "moment": "2.24.0",
+        "mongoose": "6.0.12"
+    },
+    "devDependencies": {
+        "concurrently": "4.1.0",
+        "nodemon": "1.19.1"
+    }
 }
