--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "react-app-polyfill": "1.0.6",
         "react-dom": "16.8.6",
         "react-icons": "3.7.0",
+        "react-initial": "file:..",
         "react-redux": "7.1.0-rc.1",
         "react-router-dom": "5.0.1",
         "react-scripts": "3.4.1",
@@ -26,7 +27,6 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
-
     },
     "proxy": "http://localhost:3001",
     "eslintConfig": {
