--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "npm": "6.9.0"
     },
     "scripts": {
-        "start": "concurrently \"npm run backend\" \"npm run start --prefix client\"",
+        "start": "node server/index.js",
+        "build": "npm install --prefix client && npm run build --prefix client",
         "backend": "nodemon server/index.js",
         "frontend": "npm run start --prefix client",
         "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
